# siestai

./: .env.local  .gitignore  CLAUDE.md  README.md  alembic.ini  bootstrap.py  docker-compose.yaml  main.py  main_with_bootstrap.py  pyproject.toml  requirements.txt  start_c9s_agent.py  start_c9s_terminal.py  start_database_ingest.py  start_kg_ingest.py  start_memory_api.py  start_research_agent.py  test_credentials_integration.py  test_embedding_integration.py
alembic/: env.py
alembic/versions/: 09b77fd7b160_remove_unused_chat_summaries_table.py  0c120a3bc97f_generate_documents_table.py  571e91790422_add_chat_history_tables_sessions_.py  9fe4a39052db_create_document_entity.py  ff901cac7bc1_create_documents_table.py
app/: __init__.py  agent-info.json  main.py  models.py
app/agent/: graph.py
app/agents/c9s-agent/: README.md  c9s_agent.py  langgraph_compat.py
app/agents/c9s-agent/test/: chat.py
app/agents/research_agent/: __init__.py  config.py  research_agent.py
app/agents/research_agent/docs/: STEP_VISUALIZATION.md
app/agents/research_agent/test/: chat.py
app/api/: c9s_agent_api.py  memory_api.py
app/config/: logging_config.py
app/database/: database.py
app/dto/: document_dto.py  memory_ingest_dto.py
app/llm/: brain.py  vector.py
app/memory/: ingest_memory.py
app/memory/database/: DATABASE.md  database.py  database_ingest_job.py
app/memory/database/docs/: DATABASE.md
app/memory/database/test/: test_db_ingest.py
app/memory/history/: HISTORY.md  __init__.py  history.py  session_manager.py
app/memory/history/test/: comprehensive_memory_test.py  debug_memory.py  test_memory.py  (+5 more)
app/memory/knowledge_graph/: kg_ingest_job.py  knowledge_graph.py
app/models/: __init__.py  _models.py  chat_history.py  documents.py
app/rawdata/: data_connector_interface.py  document_fetcher.py  intercom.py
app/rawdata/commands/: example_usage.py
app/rawdata/intercom/: intercom_connector.py
app/rawdata/test/: example_connector.py  test_connector.py
app/services/: embedding_service.py
app/services/nats/: __init__.py  nats_client.py  stream_configs.py
app/tools/: tools.py
app/types/: document_types.py
app/utils/: graph.utils.py  logger.py  rate_limiter.py
examples/: in-memory-vector-store.ipynb  nats_client_example.py  rich_logger_demo.py
local-model/: custom-test.csv  main.py  vector.py
model-setup/: main.py
training/: 1-prompting-basics.ipynb  2-iterative-prompt-development.ipynb
training/_langgraph/: example-chat.py
training/_langgraph/0-chatbot/: 1-chatbot_with_tools.py  chatbot.py
training/_langgraph/2-reflection-system/: chains.py
training/_langgraph/3-reflexion-agent/: chains.py  schema.py
training/_langgraph/4-state-graph/: 0_basic_state.py
training/_langgraph/5-react-agent/: agent_reason_runnable.py
training/graphrag/: graph_examples.ipynb
training/langchain-agent/: simple-web-agent.py
training/langchain-basics/: 1-model-prompt-parser.ipynb
(+4 files in other folders)
